Revert "Update settings.json"
This reverts commit 73a7cd41bf13eb298559e7c0284ffa36665fcc38.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "python.envFile": "${workspaceFolder}/.env",
-    "vim.handleKeys": {
-        "<C->":false
-    },
-    "vim.useCtrlKeys": false
+    "python.envFile": "${workspaceFolder}/.env"
 }
